<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="7dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
   <TextView
       android:textStyle="bold"
       android:textColor="@color/white"
       android:id="@+id/forcast_text"
       android:textSize="25sp"
       android:text="@string/weather_cast"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/forcast_time"
            android:text="@string/forcast_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp" />
        <TextView
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/forcast_type"
            android:text="@string/forcast_type"
            android:drawablePadding="3dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp" />
        <TextView
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/forcast_max_temperature"
            android:text="@string/forcast_max_temperature"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp" />
        <TextView
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:id="@+id/forcast_min_temperature"
            android:text="@string/forcast_min_temperature"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp" />
    </LinearLayout>
</LinearLayout>